dark mode fix

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -42,7 +42,7 @@ body {
 
   color: var(--text-color);
   background-color: var(--background-color);
-  @include darkModeAnimation();
+  @include animation();
 }
 
 .wrapper {
