--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -12,7 +12,7 @@
   height: 3rem;
   color: var(--text-color);
   background-color: var(--background-color);
-  @include darkModeAnimation();
+  @include animation();
 }
 
 .menuButton {
@@ -77,10 +77,9 @@
   // padding-left: 1rem;
   border-top-right-radius: 1rem;
   border-bottom-right-radius: 1rem;
-  @include darkModeAnimation();
   color: var(--text-color);
   background-color: var(--background-color);
-  // transition: transform 0.3s ease;
+  @include animation();
 
   &.open {
     transform: translateX(0);
@@ -95,7 +94,7 @@
   height: 100vh;
   width: 100vw;
   background-color: rgba(0, 0, 0, 0);
-  transition: background-color 0.3s ease;
+  @include animation();
 
   &.active {
     pointer-events: auto;
@@ -121,4 +120,5 @@
   @include noLinkUnderline();
   border-radius: 0.5rem;
   margin: 0.5rem;
+  @include animation();
 }
